Fix up uwsgi ini files

--- a/rail_orig/tilestache.cfg
+++ b/rail_orig/tilestache.cfg
@@ -17,22 +17,22 @@
                         "database": "empirelogistics"
                     },
                     "queries": [
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 7",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 7",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 7",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 7",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 7",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 6",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 5",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 4",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 3",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 2",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 1",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 0",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 0",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 0",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 0",
-                        "select ST_Transform(geom, 900913) as __geometry__, rtid as name, miles, densty, sb from qn28l where densty >= 0"
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 7",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 7",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 7",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 7",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 7",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 6",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 5",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 4",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 3",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 2",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 1",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 0",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 0",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 0",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 0",
+                        "select ST_Transform(rl.geometry, 900913) as __geometry__, rl.route_id as name, rl.miles, rd.name as traffic_density, rl.subdivision from rail_line rl join rail_density rd on rl.traffic_density = rd.detail where rd.name >= 0"
                     ]
         }}}
     }
