Add nginx and uwsgi/emperor confs

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -1,7 +1,7 @@
 {
     "cache": {
         "name": "Disk",
-        "path": "/tmp/stache",
+        "path": "/tmp/tilestache",
         "dirs": "portable"
     },
     "logging": "warning",
