Reconfigure uwsgi uid

--- a/etc/uwsgi_emperor/empirelogistics.ini
+++ b/etc/uwsgi_emperor/empirelogistics.ini
@@ -3,7 +3,7 @@ plugin = psgi
 processes = 4
 vacuum = true
 master = true
-uid = www-data
+uid = el
 gid = el
 chmod-socket = 666
 socket = /var/uwsgi/empirelogistics.sock
