More uwsgi stuff

--- a/etc/uwsgi_emperor/empirelogistics.ini
+++ b/etc/uwsgi_emperor/empirelogistics.ini
@@ -1,5 +1,4 @@
 [uwsgi]
-plugin = psgi
 processes = 4
 vacuum = true
 master = true
@@ -8,5 +7,5 @@ gid = el
 chmod-socket = 666
 socket = /var/uwsgi/empirelogistics.sock
 psgi = /var/local/EmpireLogistics/current/empirelogistics.psgi
-need-app = true
+need-app = false
 no-site = true
