--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -1,5 +1,4 @@
 [uwsgi]
-plugin = python
 processes = 4
 vacuum = true
 master = true
@@ -8,5 +7,5 @@ gid = el
 chmod-socket = 666
 socket = /var/uwsgi/empirelogistics_tiles.sock
 mount = /=/var/local/EmpireLogistics/current/empirelogistics_tiles.py
-need-app = true
+need-app = false
 no-site = true
