--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -10,3 +10,4 @@ socket = /var/uwsgi/empirelogistics_tiles.sock
 mount = /=/var/local/EmpireLogistics/current/empirelogistics_tiles.py
 need-app = false
 no-site = true
+enable-threads = true
