--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -11,3 +11,8 @@ mount = /=/var/local/EmpireLogistics/current/empirelogistics_tiles.py
 need-app = false
 no-site = true
 enable-threads = true
+pythonpath = /usr/lib/python2.7
+pythonpath = /var/local/EmpireLogistics/python/lib/python2.7
+pythonpath = /var/local/EmpireLogistics/python/lib/python2.7/site-packages
+pythonpath = /var/local/EmpireLogistics/python/lib/python2.7/dist-packages
+pythonpath = /var/local/EmpireLogistics/python/lib/python2.7/distutils
