Add perlbrew stuff

--- a/etc/uwsgi_emperor/empirelogistics.ini
+++ b/etc/uwsgi_emperor/empirelogistics.ini
@@ -7,5 +7,5 @@ gid = el
 chmod-socket = 666
 socket = /var/uwsgi/empirelogistics.sock
 psgi = /var/local/EmpireLogistics/current/empirelogistics.psgi
-need-app = false
+need-app = true 
 no-site = true
