--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -1,4 +1,5 @@
 [uwsgi]
+plugin = python
 processes = 4
 vacuum = true
 master = true
@@ -8,11 +9,6 @@ home = /var/local/EmpireLogistics/python
 chmod-socket = 666
 socket = /var/uwsgi/empirelogistics_tiles.sock
 mount = /=/var/local/EmpireLogistics/current/empirelogistics_tiles.py
-need-app = false
+need-app = true 
 no-site = true
 enable-threads = true
-pythonpath = /usr/lib/python2.7
-pythonpath = /var/local/EmpireLogistics/python/lib/python2.7
-pythonpath = /var/local/EmpireLogistics/python/lib/python2.7/site-packages
-pythonpath = /var/local/EmpireLogistics/python/lib/python2.7/dist-packages
-pythonpath = /var/local/EmpireLogistics/python/lib/python2.7/distutils
