--- a/etc/uwsgi_emperor/empirelogistics.ini
+++ b/etc/uwsgi_emperor/empirelogistics.ini
@@ -5,7 +5,8 @@ master = true
 uid = el
 gid = el
 chmod-socket = 666
+home = /var/local/EmpireLogistics/current/perl
 socket = /var/uwsgi/empirelogistics.sock
 psgi = /var/local/EmpireLogistics/current/empirelogistics.psgi
-need-app = true 
+need-app = true
 no-site = true
