Fix nginx config

--- a/etc/uwsgi_emperor/empirelogistics.ini
+++ b/etc/uwsgi_emperor/empirelogistics.ini
@@ -1,12 +1,12 @@
 [uwsgi]
+plugin = psgi
 processes = 4
 vacuum = true
 master = true
 uid = el
 gid = el
-chmod-socket = 666
 home = /var/local/EmpireLogistics/current/local
-socket = /var/uwsgi/empirelogistics.sock
+socket = 127.0.0.1:8888
 psgi = /var/local/EmpireLogistics/current/empirelogistics.psgi
 need-app = true
 no-site = true
