--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -6,8 +6,7 @@ master = true
 uid = el
 gid = el
 home = /var/local/python
-chmod-socket = 666
-socket = /var/uwsgi/empirelogistics_tiles.sock
+socket = 127.0.0.1:8889
 mount = /=/var/local/EmpireLogistics/current/empirelogistics_tiles.py
 need-app = true
 no-site = true
