Chef nginx reconfig

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -1,7 +1,7 @@
 {
     "cache": {
         "name": "Disk",
-        "path": "/var/local/EmpireLogistics/current/tilestache",
+        "path": "/var/local/tilestache",
         "dirs": "portable"
     },
     "logging": "warning",
