--- a/etc/chef/cookbooks/el/files/default/nginx.conf
+++ b/etc/chef/cookbooks/el/files/default/nginx.conf
@@ -1,19 +1,24 @@
 server {
-    listen 8888;
+    listen 80 default;
     server_name localhost;
+    root /var/local/EmpireLogistics/current/;
 
-    location / {
-        include uwsgi_params;
-        uwsgi_modifier1 5;
-        uwsgi_pass unix:///var/uwsgi/empirelogistics.sock;
+    # tiles are saved gzipped and not served by nginx here.
+    location ~ ^/tiles/(?<tile_path>.*)$ {
+        alias /var/local/tilestache;
+        add_header X-Static super;
+        try_files /$tile_path @tiles;
     }
-}
-server {
-    listen 8889;
-    server_name localhost;
 
+    location @tiles {
+        rewrite ^/tiles/(.*) $1 break;
+        add_header X-Static miss;
+        include uwsgi_params;
+        uwsgi_pass 127.0.0.1:8889;
+    }
     location / {
         include uwsgi_params;
-        uwsgi_pass unix:///var/uwsgi/empirelogistics_tiles.sock;
+        uwsgi_pass 127.0.0.1:8888;
+        uwsgi_modifier1 5;
     }
 }
