Refinement to local dirs

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -1,7 +1,7 @@
 {
     "cache": {
         "name": "Disk",
-        "path": "/var/local/tilestache",
+        "path": "/var/local/EmpireLogistics/shared/tiles",
         "dirs": "portable"
     },
     "logging": "warning",
