--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -5,7 +5,7 @@ vacuum = true
 master = true
 uid = el
 gid = el
-home = /var/local/python
+home = /var/local/EmpireLogistics/shared/python
 socket = 127.0.0.1:8889
 mount = /=/var/local/EmpireLogistics/current/empirelogistics_tiles.py
 need-app = true
