--- a/etc/chef/site/el/files/default/nginx.conf
+++ b/etc/chef/site/el/files/default/nginx.conf
@@ -5,7 +5,7 @@ server {
 
     # tiles are saved gzipped and not served by nginx here.
     location ~ ^/tiles/(?<tile_path>.*)$ {
-        alias /var/local/tilestache;
+        alias /var/local/EmpireLogistics/shared/tiles;
         add_header X-Static super;
         try_files /$tile_path @tiles;
     }
