Nginx tuning, trying to get gzipped json out

--- a/etc/chef/site/el/files/default/nginx.conf
+++ b/etc/chef/site/el/files/default/nginx.conf
@@ -1,13 +1,16 @@
 server {
     listen 80 default;
     server_name localhost;
-    root /var/local/EmpireLogistics/current/;
+    root /var/local/EmpireLogistics/current/root;
+    gzip_static on;
+    gzip_proxied expired no-cache no-store private auth;
+    gunzip on;
 
     # tiles are saved gzipped and not served by nginx here.
     location ~ ^/tiles/(?<tile_path>.*)$ {
         alias /var/local/EmpireLogistics/shared/tiles;
         add_header X-Static super;
-        try_files /$tile_path @tiles;
+        try_files /$tile_path.gz @tiles;
     }
 
     location @tiles {
