--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -2,7 +2,8 @@
     "cache": {
         "name": "Disk",
         "path": "/var/local/EmpireLogistics/shared/tiles",
-        "dirs": "portable"
+        "dirs": "portable",
+        "gzip": ["xml", "json"]
     },
     "logging": "warning",
     "layers": {
