--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -11,3 +11,4 @@ mount = /=/var/local/EmpireLogistics/current/empirelogistics_tiles.py
 need-app = true
 no-site = true
 enable-threads = true
+logto = /var/local/EmpireLogistics/shared/logs/empirelogistics_tiles.log
