--- a/etc/uwsgi_emperor/empirelogistics.ini
+++ b/etc/uwsgi_emperor/empirelogistics.ini
@@ -10,3 +10,5 @@ socket = 127.0.0.1:8888
 psgi = /var/local/EmpireLogistics/current/empirelogistics.psgi
 need-app = true
 no-site = true
+enable-threads = true
+logto = /var/local/EmpireLogistics/shared/logs/empirelogistics.log
