Tielstache seed and gzip cron

--- a/etc/chef/site/el/files/default/nginx.conf
+++ b/etc/chef/site/el/files/default/nginx.conf
@@ -6,11 +6,13 @@ server {
     gzip_proxied expired no-cache no-store private auth;
     gunzip on;
 
-    # tiles are saved gzipped and not served by nginx here.
+    # With this config, nginx looks for .gz, but doesn't find it
+    # because I turned it off in tilestache. We will manually
+    # gzip all tiles.
     location ~ ^/tiles/(?<tile_path>.*)$ {
         alias /var/local/EmpireLogistics/shared/tiles;
         add_header X-Static super;
-        try_files /$tile_path.gz @tiles;
+        try_files /$tile_path @tiles;
     }
 
     location @tiles {
