--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -3,7 +3,7 @@
         "name": "Disk",
         "path": "/var/local/EmpireLogistics/shared/tiles",
         "dirs": "portable",
-        "gzip": ["xml", "json"]
+        "gzip": []
     },
     "logging": "warning",
     "layers": {
