--- a/etc/uwsgi_emperor/empirelogistics.ini
+++ b/etc/uwsgi_emperor/empirelogistics.ini
@@ -12,3 +12,4 @@ need-app = true
 no-site = true
 enable-threads = true
 logto = /var/local/EmpireLogistics/shared/logs/empirelogistics.log
+env = PATH=/var/local/EmpireLogistics/shared/perl/bin:/var/local/EmpireLogistics/shared/perl/perls/perl-5.18.2/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
