--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -12,3 +12,4 @@ need-app = true
 no-site = true
 enable-threads = true
 logto = /var/local/EmpireLogistics/shared/logs/empirelogistics_tiles.log
+env = PATH=/var/local/EmpireLogistics/shared/python/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
