Dont specify nginx server name

--- a/etc/chef/site/el/files/default/nginx.conf
+++ b/etc/chef/site/el/files/default/nginx.conf
@@ -1,6 +1,5 @@
 server {
-    listen 80 default;
-    server_name localhost;
+    listen 80 default_server;
     root /var/local/EmpireLogistics/current/root;
     gzip_static on;
     gzip_proxied expired no-cache no-store private auth;
