New tiles config

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -19,22 +19,22 @@
                         "user": "el"
                     },
                     "queries": [
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 7",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 7",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 7",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 7",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 7",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 6",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 5",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 4",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 3",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 2",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 1",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 0",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 0",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 0",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 0",
-                        "select geom as __geometry__, rtid as name, miles, densty, sb from raw_rail_line where densty::integer >= 0"
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 6",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 5",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 4",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 3",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 2",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 1",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0"
                     ]
         }}}
     }
