--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -19,22 +19,22 @@
                         "user": "el"
                     },
                     "queries": [
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 7",
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 6",
                         "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 5",
                         "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 4",
                         "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 3",
                         "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 2",
                         "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 1",
                         "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0",
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0",
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0",
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0",
-                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail where td.name::integer >= 0"
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail",
+                        "select rl.geometry as __geometry__, rl.route_id as name, rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail"
                     ]
         }}}
     }
